override equals / hashCode for Task